# deepseek

./: .gitignore  pyproject.toml
data/: data_common.py  fineweb.py  tinyshakespeare.py
src/: inference.py  model.py  model_inference.py  pretrain.py  sharding.py  utils.py
