[project]
name = "ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3.2",
    "einops>=0.8.0",
    "equinox>=0.11.11",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "jax[tpu]>=0.5.0",
]

[tool.uv]
prerelease = "allow"
